@@ -18,7 +18,7 @@
   
     <div id="content">
       <br />
-      <p align="center" style="text-align:center;">This is <b>CAT12.8.1 (r2104) from 2022-08-30</b><br />You can update your copy of CAT12 here: <a href="matlab:cat_update(1);">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
+      <p align="center" style="text-align:center;">This is <b>CAT12.8.1 (r2108) from 2022-10-05</b><br />You can update your copy of CAT12 here: <a href="matlab:cat_update(1);">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
       <h1 style="text-align:center;"><img src="images/CAT.png" width=40% height=auto alt="CAT" ></h1>
 
       <hr />
